MNEMOSYNE 0.9.6:

-added import from SuperMemo7 text files (code thanks to Dirk Herrmann).
-either space, enter or return can be used to show the answer. The default
 answer grade is set to 4, which once again can be chosen by either space,
 enter or return (patch by Dirk Herrmann).
-importing of txt files in utf8 encoding now works (patch by Ian MacLean)

MNEMOSYNE 0.9.5: 2006-08-03

*** IMPORTANT UPGRADE NOTICE ***

This version uses a different database format. Before upgrading, export your
old data as xml. After upgrade, create a new database and import the old data
from the xml file.

-databases can now be moved back and forth between Windows and Unix.
-added 'Reset learning data on export' option. This makes it easier to 
 create a file to share with other people.
-the database is now saved each time a new item is added.
-fixed a bug where exporting to txt always exported all categories
 (reported by Dariusz Laska).
-items which you forget will no longer be pushed out of the revision queue
 by items which you still need to learn.


MNEMOSYNE 0.9.4: 2006-06-04

- category names are now sorted alphabetically.
- relative path names now work for multiple img tags in the same string.
  (patch by J. David Lee).
- removed leftover debug code which could cause problems with Unicode 
  items.

MNEMOSYNE 0.9.3: 2006-05-25

- relative paths can now be used in img tags, i.e. <img src="foo/bar.png">
  instead of <img src="/home/johndoe/.mnemosyne/foo/bar.png">. Paths are
  relative to the location of the *.mem file.
- added ability to export to a txt file (only the questions and the 
  answers are exported).
- added locking mechanism which warns you if you start a second
  instance of the program, which could lead to data loss.
- fixed obscure button labelling bug (patch by J. David Lee).

MNEMOSYNE 0.9.2: 2006-03-25

*** IMPORTANT UPGRADE NOTICE ***

This version uses a different database format. Before upgrading, export your 