@@ -11,3 +11,6 @@ Jarno Elonen <elonen@iki.fi>
 Dirk Herrmann <dirk.herrmann-privat@gmx.de>
 
   Supermemo import and other improvements
+
+
+Also thanks to Mike Charlton and Ian McLean for various patches.
