@@ -1,7 +1,5 @@
 Before 1.0:
 
--total number of items only for active categories (patch exists)
-
 -search after edit bug
 
 -Unicode text export
